[gd_scene load_steps=2 format=3 uid="uid://cphjro8hnrfvx"]

[ext_resource type="Script" uid="uid://bg61ar4dx3trc" path="res://Scenes&Scrips/UI/TimeUI.gd" id="1_ndinf"]

[node name="TimeUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ndinf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 128.0
offset_bottom = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="DayLabel" type="Label" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="WeekLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
